[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Sprites/whiteBG.png" type="Texture" id=2]
[ext_resource path="res://pixelFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=4]
[ext_resource path="res://Sprites/WatsonAmelia.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Kronii.png" type="Texture" id=6]
[ext_resource path="res://Sprites/WhiePanel.png" type="Texture" id=7]
[ext_resource path="res://Sprites/KroniiFlag.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Koolonii.png" type="Texture" id=9]
[ext_resource path="res://Sprites/CoolWatsonAmelia.png" type="Texture" id=10]
[ext_resource path="res://Sprites/AmeDance1.png" type="Texture" id=11]

[sub_resource type="Animation" id=1]
resource_name = "AmeDance1"
length = 0.2
loop = true
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.025, 0.05, 0.075, 0.1, 0.125, 0.15, 0.175 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="background" type="Sprite" parent="."]
self_modulate = Color( 0.596078, 0.596078, 0.596078, 1 )
scale = Vector2( 32, 30 )
texture = ExtResource( 2 )
centered = false

[node name="TileGenerator" type="Node2D" parent="."]
position = Vector2( 29, 129 )
script = ExtResource( 1 )

[node name="GameBoard" type="Sprite" parent="TileGenerator"]
scale = Vector2( 30, 20 )
texture = ExtResource( 2 )
centered = false

[node name="Timer" type="Label" parent="."]
self_modulate = Color( 0.309804, 0.345098, 0.65098, 1 )
margin_left = 821.0
margin_top = 32.0
margin_right = 901.0
margin_bottom = 66.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
text = "00:00"
align = 1
valign = 1

[node name="LifeLeft" type="Label" parent="."]
self_modulate = Color( 0.309804, 0.345098, 0.65098, 1 )
margin_left = 238.0
margin_top = 34.0
margin_right = 318.0
margin_bottom = 68.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
text = "3"
align = 1
valign = 1

[node name="Koolonii" type="Sprite" parent="LifeLeft"]
position = Vector2( 10.5, 16 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )
flip_h = true

[node name="Kronii" type="Sprite" parent="LifeLeft"]
position = Vector2( 10.5, 16 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
flip_h = true

[node name="MineLeft" type="Label" parent="."]
self_modulate = Color( 0.984314, 0.913725, 0.301961, 1 )
margin_left = 111.0
margin_top = 35.0
margin_right = 159.0
margin_bottom = 69.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
text = "100"

[node name="CoolAme" type="Sprite" parent="MineLeft"]
position = Vector2( -20.9223, 15.4085 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )
flip_h = true

[node name="Ame" type="Sprite" parent="MineLeft"]
position = Vector2( -20.9223, 15.4085 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
flip_h = true

[node name="Restart" type="TextureButton" parent="."]
self_modulate = Color( 0.572549, 0.592157, 0.756863, 1 )
margin_left = 458.0
margin_top = 18.0
margin_right = 554.0
margin_bottom = 114.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
expand = true

[node name="Sprite" type="Sprite" parent="Restart"]
position = Vector2( 45, 46 )
scale = Vector2( 4, 4 )
texture = ExtResource( 8 )

[node name="AmeBG" type="Sprite" parent="."]
self_modulate = Color( 1, 0.905882, 0.686275, 1 )
position = Vector2( 513, 986 )
scale = Vector2( 37.5938, 10.4062 )
texture = ExtResource( 2 )

[node name="AmeDance" type="Sprite" parent="AmeBG"]
position = Vector2( -0.239441, 0.384399 )
scale = Vector2( 0.0266002, 0.0960961 )
texture = ExtResource( 11 )
hframes = 4
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="AmeBG/AmeDance"]
anims/AmeDance1 = SubResource( 1 )

[node name="Tween" type="Tween" parent="AmeBG"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 400 )
current = true

[connection signal="button_down" from="Restart" to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="Restart" to="." method="_on_TextureButton_button_up"]
